# marimo-themes

./: .gitignore  README.md  default.css  pyproject.toml  ruff.toml  sample.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  new_command.yml  new_theme.yml
src/motheme/: __init__.py  app_parser.py  apply_theme.py  clear_theme.py  cli.py  create_theme.py  current_theme.py  list_themes.py  remove_theme.py  theme_downloader.py  util.py
tests/: test_notebook_1.py  test_notebook_2.py
tests/test_utils/: test_app_parser.py
themes/catppuccin_frappe_dark/: catppuccin_frappe_dark.css
themes/catppuccin_latte_light/: catppuccin_latte_light.css
themes/catppuccin_macchiato_dark/: catppuccin_macchiato_dark.css
themes/catppuccin_mocha_dark/: catppuccin_mocha_dark.css
themes/coldme/: coldme.css
themes/mininini/: mininini.css
themes/nord/: nord.css
themes/wigwam/: wigwam.css
