[project]
name = "motheme"
version = "0.1.0"
description = "Marimo Theming Management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["appdirs>=1.4.4", "arguably>=1.3.0", "requests>=2.32.3"]

[project.scripts]
motheme = "motheme.cli:main"

[tool.uv]
dev-dependencies = ["marimo>=0.9.14", "ruff>=0.7.1", "vega-datasets>=0.9.0"]
