[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motheme"
version = "0.1.3"
description = "Marimo Theming Management"
authors = [{ name = "eugene", email = "heinereugene@pm.me" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["appdirs>=1.4.4", "arguably>=1.3.0", "requests>=2.32.3"]

[project.scripts]
motheme = "motheme.cli:main"

[project.urls]
Homepage = "https://github.com/metaboulie/marimo-themes"
Repository = "https://github.com/metaboulie/marimo-themes"

[tool.uv]
dev-dependencies = [
  "marimo>=0.9.14",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.1",
  "vega-datasets>=0.9.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["motheme"]
