[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motheme"
dynamic = ["version"]
description = "Marimo Theming Management"
authors = [{ name = "eugene", email = "heinereugene@pm.me" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["theme", "marimo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["appdirs>=1.4.4", "arguably>=1.3.0", "requests>=2.32.3"]

[project.scripts]
motheme = "motheme.cli:main"

[project.urls]
Homepage = "https://github.com/metaboulie/marimo-themes"
Repository = "https://github.com/metaboulie/marimo-themes"

[tool.hatch.version]
path = "src/motheme/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/motheme"]

[tool.hatch.envs.default]
installer = "uv"

[dependency-groups]
dev = ["hatch>=1.13.0", "marimo>=0.9.14", "ruff>=0.7.1"]
